# SFML-Project

./: .gitignore  CMakeLists.txt  README.md
src/: PlayerChar.cpp  PlayerChar.h  main.cpp
src/assets/chars/: BlackBallPurp.xcf
